@startuml
title SecureCourse Builder Pattern

interface CourseBuilder {
    +reset(): void
    +buildCode(code: String): CourseBuilder
    +buildTitle(title: String): CourseBuilder
    +buildInstructor(instructorName: String): CourseBuilder
    +buildCapacity(capacity: int): CourseBuilder
    +getCourse(): Course
}

class DefaultCourseBuilder {
    -code: String
    -title: String
    -instructorName: String
    -capacity: int
    +DefaultCourseBuilder()
    +reset(): void
    +buildCode(code: String): CourseBuilder
    +buildTitle(title: String): CourseBuilder
    +buildInstructor(instructorName: String): CourseBuilder
    +buildCapacity(capacity: int): CourseBuilder
    +getCourse(): Course
    -validateRequiredFields(): void
}

class CourseDirector {
    -builder: CourseBuilder
    +CourseDirector(builder: CourseBuilder)
    +constructCourse(code: String, title: String, instructorName: String, capacity: int): Course
}

class Course {
    -code: String
    -title: String
    -instructorName: String
    -capacity: int
    +Course(code: String, title: String, instructorName: String, capacity: int)
}

class CourseService {
    +CourseService()
}

CourseBuilder <|.. DefaultCourseBuilder
DefaultCourseBuilder --> Course : creates
CourseDirector --> CourseBuilder : directs
CourseService --> CourseDirector : uses

@enduml
